refs #598. Fix logo scaling on IE 10 and 11.

--- a/cc/scss/base/_utils.scss
+++ b/cc/scss/base/_utils.scss
@@ -27,3 +27,10 @@
     display: none;
   }
 }
+
+/* IE10-11 SVG scaling hack */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  img[src*=".svg"] {
+    width: 100%; 
+  }
+}
